Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.5311044340214124
         }
       }
+    },
+    {
+      "id": "mask-1769639758100",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639758100.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.7075506323714462,
+          "y": 0.5131645232153902
+        },
+        "rightEye": {
+          "x": 0.2697827009618871,
+          "y": 0.4901688101179432
+        }
+      }
     }
   ]
 }
