Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.4901688101179432
         }
       }
+    },
+    {
+      "id": "mask-1769639762108",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639762108.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6662279433007038,
+          "y": 0.32071882706048693
+        },
+        "rightEye": {
+          "x": 0.3591053900326301,
+          "y": 0.3292811729395133
+        }
+      }
     }
   ]
 }
