Update manifest: add iPhone-Jan28-2154

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.7589219883147786
         }
       }
+    },
+    {
+      "id": "mask-1769639785912",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639785912.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6469394129060526,
+          "y": 0.5318115207277126
+        },
+        "rightEye": {
+          "x": 0.33906058709394743,
+          "y": 0.5508551459389538
+        }
+      }
     }
   ]
 }
