Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.5354760265641415
         }
       }
+    },
+    {
+      "id": "mask-1769639799561",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639799561.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6564200947967778,
+          "y": 0.47150918850040774
+        },
+        "rightEye": {
+          "x": 0.3375799052032228,
+          "y": 0.5198241448329259
+        }
+      }
     }
   ]
 }
