Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.5198241448329259
         }
       }
+    },
+    {
+      "id": "mask-1769639805094",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639805094.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6102771553212402,
+          "y": 0.6630148019084735
+        },
+        "rightEye": {
+          "x": 0.387722844678761,
+          "y": 0.6609851980915281
+        }
+      }
     }
   ]
 }
