Update manifest: add iPhone-Jan28-2153

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.651490236634306
         }
       }
+    },
+    {
+      "id": "mask-1769639833971",
+      "name": "iPhone-Jan28-2153",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639833971.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6824629332857485,
+          "y": 0.48990428582101503
+        },
+        "rightEye": {
+          "x": 0.296203733380918,
+          "y": 0.47676238084565153
+        }
+      }
     }
   ]
 }
