Update manifest: add iPhone-Jan28-2154

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.47676238084565153
         }
       }
+    },
+    {
+      "id": "mask-1769639840023",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639840023.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6465178180251714,
+          "y": 0.5017734441776494
+        },
+        "rightEye": {
+          "x": 0.26814884864149574,
+          "y": 0.4995598891556847
+        }
+      }
     }
   ]
 }
