Update manifest: add iPhone-Jan28-2154

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -152,6 +152,21 @@
           "y": 0.5435853754099
         }
       }
+    },
+    {
+      "id": "mask-1769639849753",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639849753.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6367916530741118,
+          "y": 0.5125215299232089
+        },
+        "rightEye": {
+          "x": 0.34720834692588876,
+          "y": 0.5054784700767918
+        }
+      }
     }
   ]
 }
