--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -152,6 +152,21 @@
           "y": 0.5198220848759543
         }
       }
+    },
+    {
+      "id": "mask-1769639859197",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639859197.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6337230443619393,
+          "y": 0.5177498167432519
+        },
+        "rightEye": {
+          "x": 0.3296102889713953,
+          "y": 0.5215835165900835
+        }
+      }
     }
   ]
 }
