Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.47676238084565153
         }
       }
+    },
+    {
+      "id": "mask-1769639895073",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769639895073.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6020345376561593,
+          "y": 0.5766050083347379
+        },
+        "rightEye": {
+          "x": 0.30329879567717405,
+          "y": 0.5860616583319286
+        }
+      }
     }
   ]
 }
