--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.24751241782000963
         }
       }
+    },
+    {
+      "id": "mask-1769640244079",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640244079.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6892142584018692,
+          "y": 0.31111497276159594
+        },
+        "rightEye": {
+          "x": 0.40478574159813235,
+          "y": 0.3208850272384044
+        }
+      }
     }
   ]
 }
