--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.5684349611757289
         }
       }
+    },
+    {
+      "id": "mask-1769640274250",
+      "name": "iPhone-Jan28-2153",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640274250.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5962559152085297,
+          "y": 0.5057482921498663
+        },
+        "rightEye": {
+          "x": 0.3624107514581367,
+          "y": 0.4969183745168004
+        }
+      }
     }
   ]
 }
