Update manifest: add iPhone-Jan28-2154

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.4969183745168004
         }
       }
+    },
+    {
+      "id": "mask-1769640361711",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640361711.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6265227340463203,
+          "y": 0.5503518357016678
+        },
+        "rightEye": {
+          "x": 0.3934772659536795,
+          "y": 0.5576481642983325
+        }
+      }
     }
   ]
 }
