Update manifest: add iPhone-Jan28-2154

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.5576481642983325
         }
       }
+    },
+    {
+      "id": "mask-1769640364940",
+      "name": "iPhone-Jan28-2154",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640364940.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6304242762429724,
+          "y": 0.4236484162747861
+        },
+        "rightEye": {
+          "x": 0.3775757237570274,
+          "y": 0.4243515837252134
+        }
+      }
     }
   ]
 }
