Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.5735802873929189
         }
       }
+    },
+    {
+      "id": "mask-1769640385385",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640385385.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.7275704668284902,
+          "y": 0.33826442693772146
+        },
+        "rightEye": {
+          "x": 0.3344295331715127,
+          "y": 0.3224022397289455
+        }
+      }
     }
   ]
 }
