Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -152,6 +152,21 @@
           "y": 0.42007658765804684
         }
       }
+    },
+    {
+      "id": "mask-1769640423050",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640423050.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6882714975917043,
+          "y": 0.4427626103950134
+        },
+        "rightEye": {
+          "x": 0.2997285024082985,
+          "y": 0.4265707229383203
+        }
+      }
     }
   ]
 }
