Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -152,6 +152,21 @@
           "y": 0.4265707229383203
         }
       }
+    },
+    {
+      "id": "mask-1769640428805",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640428805.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.7731299375817049,
+          "y": 0
+        },
+        "rightEye": {
+          "x": 0.2995367290849646,
+          "y": 0
+        }
+      }
     }
   ]
 }
