Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.42007658765804684
         }
       }
+    },
+    {
+      "id": "mask-1769640462830",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640462830.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6647072418465146,
+          "y": 0.5223320586414677
+        },
+        "rightEye": {
+          "x": 0.40529275815348853,
+          "y": 0.5336679413585323
+        }
+      }
     }
   ]
 }
