Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.7033797005038885
         }
       }
+    },
+    {
+      "id": "mask-1769640495336",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640495336.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.627329787115831,
+          "y": 0.31105346407524886
+        },
+        "rightEye": {
+          "x": 0.3460035462175056,
+          "y": 0.31827986925808277
+        }
+      }
     }
   ]
 }
