Update manifest: add iPhone-Jan28-2152

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.31827986925808277
         }
       }
+    },
+    {
+      "id": "mask-1769640511662",
+      "name": "iPhone-Jan28-2152",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769640511662.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.611722827466314,
+          "y": 0.4037942220975476
+        },
+        "rightEye": {
+          "x": 0.37161050586701927,
+          "y": 0.4095391112357856
+        }
+      }
     }
   ]
 }
