Update manifest: add iPhone-Jan28-2153

--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -122,6 +122,21 @@
           "y": 0.44074019573202344
         }
       }
+    },
+    {
+      "id": "mask-1769692704257",
+      "name": "iPhone-Jan28-2153",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769692704257.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6423577051656714,
+          "y": 0.5188807358222556
+        },
+        "rightEye": {
+          "x": 0.3029756281676602,
+          "y": 0.5164525975110763
+        }
+      }
     }
   ]
 }
