Update manifest: add Mac-Jan26-2135

--- a/groups/public/manifest.json
+++ b/groups/public/manifest.json
@@ -150,6 +150,21 @@
           "y": 0.8379732613452457
         }
       }
+    },
+    {
+      "id": "mask-1769703366501",
+      "name": "Mac-Jan26-2135",
+      "image": "groups/public/images/mask-1769703366501.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.6487817236608898,
+          "y": 0.5067310697874126
+        },
+        "rightEye": {
+          "x": 0.45788494300577687,
+          "y": 0.5291013963448703
+        }
+      }
     }
   ]
 }
