--- a/groups/f_W2BUBrA4Y5LD/manifest.json
+++ b/groups/f_W2BUBrA4Y5LD/manifest.json
@@ -137,6 +137,21 @@
           "y": 0.563654137189215
         }
       }
+    },
+    {
+      "id": "mask-1769773434948",
+      "name": "iPhone-Jan30-1143",
+      "image": "groups/f_W2BUBrA4Y5LD/images/mask-1769773434948.png",
+      "anchors": {
+        "leftEye": {
+          "x": 0.5577587578095116,
+          "y": 0.1366192531893594
+        },
+        "rightEye": {
+          "x": 0.3449079088571537,
+          "y": 0.13871408014397468
+        }
+      }
     }
   ]
 }
